--- a/sites/all/themes/light_skeleton/css/light_skeleton_style.css
+++ b/sites/all/themes/light_skeleton/css/light_skeleton_style.css
@@ -367,12 +367,15 @@ p.margin {
     -webkit-box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.03);
     box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.03);
     border-bottom: 1px solid #e0e0e0;
+    padding: 8px 0px;
 }
 
 .breadcrumb{
  display: inline;
  padding-top: 12px;
+ font-size: x-small;
 }
+
 
 @media (min-width: 600px) {
   .breadcrumb {
@@ -381,6 +384,10 @@ p.margin {
   .title_page{
     display: inline;
   }
+}
+
+.title_page{
+  font-size: x-large;
 }
 
 .right {
@@ -393,4 +400,31 @@ p.margin {
 
 .option{
   display:inline;
+}
+
+
+fieldset {
+  background-color: #fcfcfc;
+  border: 2px solid #e0e0e0;
+  padding: 23px;
+  -webkit-box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.03);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.03);
+}
+
+
+#footer-bottom{
+    border-top: 1px solid #e0e0e0;
+    padding: 16px 0px;
+}
+
+
+.title_color{
+  background-color: rgba(30, 174, 219, 0.2);
+  padding: 3.5px;
+}
+
+.header_image{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
